--- a/styles/scss/profile.scss
+++ b/styles/scss/profile.scss
@@ -7,6 +7,10 @@
     flex-basis: 35%;
     margin: 0 5% 0 0;
     max-width: 400px;
+
+    div {
+      width: 100%;
+    }
   }
 
   &__info-form {
