--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -362,6 +362,7 @@ a:hover:after, a:focus:after {
   background-color: #000;
   width: 40px;
   height: 30px;
+  z-index: 3;
   background-size: 50%;
   background-repeat: no-repeat;
   background-position: center;
@@ -458,9 +459,7 @@ a:hover:after, a:focus:after {
   font-size: 14px;
   line-height: 14px;
   border-bottom: 1px solid #000;
-}
-.form__input:focus, .form__textarea:focus {
-  border-bottom: 1px solid #b90000;
+  border-right: 0;
 }
 .form__input[readonly], .form__textarea[readonly] {
   cursor: default;
@@ -468,6 +467,9 @@ a:hover:after, a:focus:after {
 }
 .form__input[readonly]:focus, .form__textarea[readonly]:focus {
   border-bottom: 1px solid #fff;
+}
+.form__input:focus, .form__textarea:focus {
+  border-bottom: 1px solid #b90000;
 }
 @media (max-width: 768px) {
   .form__input, .form__textarea {
@@ -507,6 +509,7 @@ a:hover:after, a:focus:after {
   font-size: 16px;
   line-height: 16px;
   padding: 10px 15px;
+  border-radius: 0;
   border: 2px solid #b90000;
   transition: 200ms;
   font-weight: bold;
@@ -887,6 +890,7 @@ a:hover:after, a:focus:after {
   background-color: #000;
   width: 40px;
   height: 30px;
+  z-index: 3;
   background-size: 50%;
   background-repeat: no-repeat;
   background-position: center;
@@ -1002,6 +1006,7 @@ a:hover:after, a:focus:after {
   font-size: 16px;
   line-height: 16px;
   padding: 10px 15px;
+  border-radius: 0;
   border: 2px solid #b90000;
   transition: 200ms;
   font-weight: bold;
