--- a/styles/scss/_mixin.scss
+++ b/styles/scss/_mixin.scss
@@ -4,6 +4,7 @@
   font-size: 16px;
   line-height: 16px;
   padding: 10px 15px;
+  border-radius: 0;
   border: 2px solid $colorRed;
   transition: 200ms;
   font-weight: bold;
@@ -30,6 +31,7 @@
   background-color: $colorBlack;
   width: 40px;
   height: 30px;
+  z-index: 3;
   background-size: 50%;
   background-repeat: no-repeat;
   background-position: center;
