--- a/styles/scss/form.scss
+++ b/styles/scss/form.scss
@@ -89,6 +89,7 @@
         font-size: 14px;
         line-height: 14px;
         border-bottom: 1px solid $colorBlack;
+        border-right: 0;
 
         &[readonly] {
             cursor: default;
