--- a/styles/scss/common.scss
+++ b/styles/scss/common.scss
@@ -26,7 +26,7 @@ body {
     font-family: 'Montserrat', sans-serif;
 	font-size: 14px;
 	line-height: 17px;
-	letter-spacing: 0.3px;
+	letter-spacing: 0.25px;
 	background-color: $colorWhite;
 }
 
@@ -34,12 +34,15 @@ button {
 	font-family: 'Montserrat', sans-serif;
 	cursor: pointer;
 	outline: none;
+	border-radius: 0;
+	appearance: none;
 }
 
 input,
 textarea {
 	outline: none;
 	border: none;
+	border-radius: 0;
 }
 input[type="button"] {
 	cursor: pointer;
