--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -41,10 +41,12 @@ textarea {
   outline: none;
   border: none;
   border-radius: 0;
+  appearance: none;
 }
 
 input[type=button] {
   cursor: pointer;
+  appearance: none;
 }
 
 h1, h2, h3, h4, h5, h6 {
