--- a/styles/scss/common.scss
+++ b/styles/scss/common.scss
@@ -43,9 +43,12 @@ textarea {
 	outline: none;
 	border: none;
 	border-radius: 0;
+	appearance: none;
 }
+
 input[type="button"] {
 	cursor: pointer;
+	appearance: none;
 }
 
 h1, h2, h3, h4, h5, h6 {
