--- a/styles/scss/form.scss
+++ b/styles/scss/form.scss
@@ -148,6 +148,9 @@
 
     &__link {
         font-weight: bold;
+        font-size: 14px;
+        line-height: 17px;
+        letter-spacing: .25px;
         color: $colorRed;
 
         &.button {
