--- a/styles/scss/modal-window.scss
+++ b/styles/scss/modal-window.scss
@@ -13,6 +13,11 @@
   transform: translateY(-100vh);
   cursor: pointer;
 
+  @include breakpoint(mobile) {
+    top: 60px;
+    height: calc(100vh - 60px);
+  }
+
   &.open {
     transform: rotateY(0);
   }
@@ -28,7 +33,7 @@
 
     @include breakpoint(mobile) {
       width: 100%;
-      height: 100vh;
+      height: 100%;
       box-shadow: none;
     }
   }
