--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -99,7 +99,7 @@ a:hover:after, a:focus:after {
 
 .wrapper-img img {
   width: 100%;
-  height: 100% !important;
+  height: auto !important;
   min-height: auto !important;
   max-width: 100%;
   max-height: 100%;
