--- a/styles/scss/common.scss
+++ b/styles/scss/common.scss
@@ -105,7 +105,7 @@ a {
 
 .wrapper-img img {
 	width: 100%;
-	height: 100% !important;
+	height: auto !important;
 	min-height: auto !important;
 	max-width: 100%;
 	max-height: 100%;
