--- a/styles/scss/_mixin.scss
+++ b/styles/scss/_mixin.scss
@@ -19,6 +19,12 @@
   @include breakpoint(mobile) {
     font-size: 14px;
     line-height: 14px;
+
+    &:hover,
+    &:focus {
+      background-color: $colorWhite;
+      color: $colorRed;
+    }
   }
 }
 
