--- a/styles/scss/cards.scss
+++ b/styles/scss/cards.scss
@@ -187,8 +187,8 @@
     background-color: #000;
     background-image: url("../../images/delete.svg");
     background-size: 70% 70%;
-    height: 60px;
-    width: 60px;
+    height: 65px;
+    width: 65px;
     border: none;
     background-repeat: no-repeat;
     background-position: center;
@@ -199,8 +199,9 @@
     }
 
     @include breakpoint(mobile) {
-        height: 40px;
-        width: 40px;
+        height: 50px;
+        width: 50px;
+        background-size: 50% 50%;
     }
 }
 
