--- a/styles/scss/_mixin.scss
+++ b/styles/scss/_mixin.scss
@@ -20,8 +20,7 @@
     font-size: 14px;
     line-height: 14px;
 
-    &:hover,
-    &:focus {
+    &:hover {
       background-color: $colorWhite;
       color: $colorRed;
     }
