--- a/styles/scss/header.scss
+++ b/styles/scss/header.scss
@@ -56,6 +56,10 @@
 	}
 
 	@include breakpoint(mobile) {
+		position: fixed;
+		width: 100%;
+		top: 0;
+		left: 0;
 		padding: 10px;
 		height: 60px;
 
