--- a/styles/scss/_mixin.scss
+++ b/styles/scss/_mixin.scss
@@ -11,8 +11,7 @@
 
   &:hover,
   &:active,
-  &:focus,
-  &:target {
+  &:focus {
     background-color: $colorRed;
     color: $colorWhite;
   }
@@ -20,11 +19,6 @@
   @include breakpoint(mobile) {
     font-size: 14px;
     line-height: 14px;
-
-    &:hover {
-      background-color: $colorWhite;
-      color: $colorRed;
-    }
   }
 }
 
