add in project chartist, add page with charts

--- a/styles/scss/index.scss
+++ b/styles/scss/index.scss
@@ -1,10 +1,11 @@
-@import "_variables.scss";
-@import "_breackpoints.scss";
-@import "_mixin.scss";
-@import "common.scss";
-@import "header.scss";
-@import "sidebar.scss";
-@import "form.scss";
-@import "cards.scss";
-@import "profile.scss";
-@import "modal-window.scss";
+@import "_variables";
+@import "_breackpoints";
+@import "_mixin";
+@import "common";
+@import "header";
+@import "sidebar";
+@import "form";
+@import "cards";
+@import "profile";
+@import "modal-window";
+@import "chartist";
