--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -547,13 +547,20 @@ a:hover:after, a:focus:after {
 }
 .form__select > div:nth-child(2) {
   border: none;
-  padding: 0;
+  padding: 0 0 0 5px;
   font-size: 14px;
   line-height: 14px;
   border-bottom: 1px solid #000;
   border-radius: 0;
   min-height: 30px;
   cursor: pointer;
+}
+.form__select > div:nth-child(2) > div {
+  padding: 0;
+}
+.form__select > div:nth-child(2) > div > div {
+  margin-left: 0;
+  margin-right: 0;
 }
 .form__wrapper-buttons {
   display: flex;
