--- a/styles/scss/form.scss
+++ b/styles/scss/form.scss
@@ -43,12 +43,18 @@
     padding: 10px;
     border: 2px solid black;
     height: 50px;
-    margin: 0 0 30px 0;
+    margin: 0 0 50px 0;
     position: relative;
     width: 100%;
     cursor: pointer;
     display: flex;
     align-items: center;
+
+    .form__notice {
+      display: block;
+      position: absolute;
+      bottom: -24px;
+    }
 
     .form__label {
       margin: 0;
