--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -1330,3 +1330,52 @@ a:hover:after, a:focus:after {
 .button-open-login-page:after {
   display: none;
 }
+
+.loader {
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  background-color: #e7e7e7;
+  top: 0;
+  left: 0;
+  z-index: 10;
+}
+.loader__text {
+  width: 250px;
+  height: 50px;
+  line-height: 50px;
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-transform: uppercase;
+  font-weight: 900;
+  font-size: 28px;
+  color: #b90000;
+  letter-spacing: 0.2em;
+}
+.loader__text::before, .loader__text::after {
+  content: "";
+  display: block;
+  width: 15px;
+  height: 8px;
+  background: #b90000;
+  position: absolute;
+  animation: load 0.7s infinite alternate ease-in-out;
+}
+.loader__text::before {
+  top: -10px;
+}
+.loader__text::after {
+  bottom: -10px;
+}
+
+@keyframes load {
+  0% {
+    left: 0;
+  }
+  100% {
+    left: 250px;
+  }
+}
