--- a/styles/scss/loader.scss
+++ b/styles/scss/loader.scss
@@ -5,7 +5,9 @@
   background-color: $colorBgLoader;
   top: 0;
   left: 0;
-  z-index: 10;
+  z-index: 12;
+  -webkit-transform: translate3d(0,0,1px);
+  transform: translate3d(0,0,1px);
 
   &__text {
     width: 250px;
