--- a/styles/scss/form.scss
+++ b/styles/scss/form.scss
@@ -177,7 +177,7 @@
   }
 
   &__select {
-    > div:nth-child(2) {
+    & > div:nth-child(2) {
       border: none;
       padding: 0 0 0 5px;
       font-size: 14px;
@@ -187,14 +187,20 @@
       min-height: 30px;
       cursor: pointer;
 
-      > div {
+      & > div {
         padding: 0;
 
-        > div {
+        & > div {
           margin-left: 0;
           margin-right: 0;
         }
       }
+    }
+
+    & > div:nth-child(3) {
+      max-height: 250px;
+      overflow-y: auto;
+      @include scroll;
     }
   }
 
