--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -1354,6 +1354,7 @@ a:hover:after, a:focus:after {
 
 .report-container {
   display: flex;
+  align-items: flex-start;
   flex-basis: 100%;
   margin: 80px 0 0 0;
 }
