--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -1164,7 +1164,7 @@ a:hover:after, a:focus:after {
   }
 }
 .modal-window__show-cards .card {
-  flex-basis: 48%;
+  flex-basis: 46%;
 }
 .modal-window__show-cards .button-edit-profile {
   margin: 15px auto 0 auto;
@@ -1371,7 +1371,10 @@ a:hover:after, a:focus:after {
   font-weight: bold;
 }
 .report-container .report {
-  width: 400px;
+  width: 500px;
+}
+.report-container .report > div {
+  margin: 0 auto;
 }
 @media (max-width: 1100px) {
   .report-container .report {
