--- a/styles/scss/reports.scss
+++ b/styles/scss/reports.scss
@@ -17,7 +17,11 @@
   }
 
   .report {
-    width: 400px;
+    width: 500px;
+
+    > div  {
+      margin: 0 auto;
+    }
 
     @include breakpoint(tablet) {
       width: 100%;
