--- a/styles/scss/form.scss
+++ b/styles/scss/form.scss
@@ -417,7 +417,7 @@
   &-add-category {
     display: flex;
     width: 100%;
-    align-items: end;
+    align-items: flex-end;
     flex-wrap: wrap;
     height: 0;
     overflow-y: hidden;
